--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 <body>
 	<header>
 		<nav>
-			<ul class="navigation">
-				<li class="nav1">logo</li>
-				<li class="nav2">home</li>
-				<li class="nav3">discovery</li>
-				<li class="nav4">photos</li>
-				<li class="nav5">contacts</li>
-				<img class="icon" src="images/icon.svg" alt="icon">
-		 	</ul>
-
-        </nav>
+			<div class="navigation div">
+				<ul class="navigation">
+					<li class="nav1">logo</li>
+					<li class="nav2">home</li>
+					<li class="nav3">discovery</li>
+					<li class="nav4">photos</li>
+					<li class="nav5">contacts</li>
+					<img class="icon" src="images/icon.svg" alt="icon">
+		 		</ul>
+			</div>
+       		</nav>
 	</header>
 	<p class="block1-head">TRENDING</p>
 	<section>
