--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header>
 		<nav>
-			<div class="navigation div">
+			<div class="navigation-div">
 				<ul class="navigation">
 					<li class="nav1">logo</li>
 					<li class="nav2">home</li>
